Version 3.xxxx (May xx 2016)
- Implemented: Atag One Thermostat support
- Implemented: Blockly/Lua Camera device, to send camera snapshots with subject after xx seconds
- Implemented: Blockly upgraded to latest version (fixed and cleaned some code as well), this fixes problem with long sensor lists
- Implemented: Custom Sensor
- Implemented: Devices Tab, Log icon for Pressure
- Implemented: Dust Sensor (ug/m3)
- Implemented: MySensors, Implemented Acknowledge Timeout per Child sensor
- Implemented: Nefit Easy, User Mode (as switch, On=Clock, Off=Manual), Flow Temperature
- Implemented: OpenZWave, Aeotec ZWave+ USB Controller, Enable/Disable blinking mode (@Schmart, Thanks for the magic codes!)
- Implemented: OpenZWave, Node table, now also displays Manufacturer, Product ID and Product Type
- Implemented: OpenZWave, When including Thermostat Setpoints, the zwave Label will be used as Name by default
- Implemented: RFLink: Displaying firmware version in the hardware setup
- Implemented: RFXCom, Blinds T12 (Confexx)
- Implemented: S0 Meter TCP
- Changed: OpenZWave, Better support for Thermostat Modes
- Changed: Stable ID generation for Philips Hue scenes (you need to delete all scenes and restart the hue hardware or domoticz)
- Changed: Wind Direction graph (now does not display directions when speed was equal to zero)
- Changed: ETH-8020, ignoring return message as it always returns (no more Success message)
- Fixed: Better handling of white listed commands/urls
- Fixed: Database backup is now only possible for admin users
- Fixed: Double checking command rights
- Fixed: Fix Off Delay not handled for Selector switch (#538).
- Fixed: Fix On/Off delays not saved on the selector switch edit form (#532).
- Fixed: KMTronic, did not work in timers/groups/scenes
- Fixed: Wind Speed/Gust graph, Plotbands
- Fixed: Added grid lines to percentage/lux/general graphs

Version 3.4834 (March 2nd 2016)