@@ -225,6 +225,7 @@ const char *Hardware_Type_Desc(int hType)
 		{ HTYPE_FITBIT, "Fitbit" },
 		{ HTYPE_RAVEn, "Rainforest RAVEn USB" },
 		{ HTYPE_S0SmartMeterTCP, "S0 Meter with LAN interface" },
+		{ HTYPE_DenkoviSmartdenLan, "Denkovi Smartden with LAN interface" },
 		{ 0, NULL, NULL }
 	};
 	return findTableIDSingle1 (Table, hType);
