@@ -411,6 +411,9 @@
     <Filter Include="Devices\Raven">
       <UniqueIdentifier>{0854a79e-fd9c-4b55-a9fd-93077f3bad23}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Devices\Denkovi">
+      <UniqueIdentifier>{fbed8d30-c2ae-4545-a422-68ebe2c781c3}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\CMakeLists.txt">
@@ -1843,6 +1846,9 @@
     <ClInclude Include="..\hardware\S0MeterTCP.h">
       <Filter>Devices\S0 Meter</Filter>
     </ClInclude>
+    <ClInclude Include="..\hardware\DenkoviSmartdenLan.h">
+      <Filter>Devices\Denkovi</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\webserver\Base64.cpp">
@@ -2405,6 +2411,9 @@
     </ClCompile>
     <ClCompile Include="..\hardware\S0MeterTCP.cpp">
       <Filter>Devices\S0 Meter</Filter>
+    </ClCompile>
+    <ClCompile Include="..\hardware\DenkoviSmartdenLan.cpp">
+      <Filter>Devices\Denkovi</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
