@@ -1,8 +1,9 @@
-Version 3.xxxx (May xx 2016)
+Version 3.xxxx (June xx 2016)
 - Implemented: Atag One Thermostat support
 - Implemented: Blockly/Lua Camera device, to send camera snapshots with subject after xx seconds
 - Implemented: Blockly upgraded to latest version (fixed and cleaned some code as well), this fixes problem with long sensor lists
 - Implemented: Custom Sensor
+- Implemented: Denkovi Smartden with LAN Interface
 - Implemented: Devices Tab, Log icon for Pressure
 - Implemented: Dust Sensor (ug/m3)
 - Implemented: MySensors, Implemented Acknowledge Timeout per Child sensor
